# vaultpipe

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  rust-toolchain.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: lint.yml
keepassxc-browser-protocol/: .gitignore  Cargo.toml
keepassxc-browser-protocol/src/: client.rs  keystore.rs  lib.rs  socket.rs
keepassxc-browser-protocol/src/message/: mod.rs
keepassxc-browser-protocol/src/message/action/: associate.rs  change_public_key.rs  get_logins.rs  mod.rs  test_association.rs
src/: config.rs  env.rs  lib.rs  pty.rs
src/source/: mod.rs
