[package]
name = "vaultpipe"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "vaultpipe"

[lib]

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
clap-stdin = "0.6.0"
dotenvy = "0.15.7"
kdl = "6.3.4"
miette = { version = "7.6.0", features = ["fancy"] }
portable-pty = "0.9.0"
rstest = "0.25.0"
terminal_size = "0.4.2"
test-log = { version = "0.2.18", features = ["trace"] }
tokio = { version = "1.45.1", features = ["full", "rt", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
xdg = "3.0.0"
