[package]
name = "keepassxc-browser-protocol"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "kp"

[dependencies]
base64 = "0.22.1"
crypto_box = "0.9.1"
keyring = { version = "3.6.2", features = ["apple-native", "linux-native", "sync-secret-service"] }
miette = { version = "7.6.0", features = ["fancy"] }
rand = "0.9.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
